--- a/intro.html
+++ b/intro.html
@@ -34,5 +34,8 @@
         <p>
         <a href="echo.html">Aesthetic Failure</a>
         </p>
+        <p>
+        <a href="index.html">Back to Index</a>
+        </p>
     </body>
 </html>
